[FIX] Tabs: Fixed the problem that tabs are not aligned if one tab property is empty.

--- a/components/tabs/style/index.less
+++ b/components/tabs/style/index.less
@@ -272,6 +272,7 @@
       position: relative;
       display: inline-flex;
       align-items: center;
+      float: left;
       box-sizing: border-box;
       margin: @tab-horizontal-margin;
       padding: @tab-horizontal-padding;
